--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   sonarqube:
-    image: sonarqube:9.9-community
+    image: sonarqube:lts-community
     container_name: sonarqube
     volumes:
       - ./sonardata/data:/opt/sonarqube/data
